--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,17 +1,18 @@
 
 @media screen and (min-width: 480px) {
-    .nav-bar {
-	height: 5em;
+    h1#logo {
+        font-size: 1.5em;
+        padding: 1.3em 2em;
+    }
+    .fa-bars, .fa-close {
+        font-size: 1.2em;
+	padding: 1.2em 1.5em;
     }
     nav {
         padding-top: 6em;
     }
-    nav img {
-	height: 8em;
-        width: 8em;
-    }
     ul li {
-        font-size: 1.2em;
+        font-size: 1.3em;
 	padding: 1.3em;
     }
     button {
@@ -27,7 +28,7 @@
         padding: 0 0.2em;
     }
     .greet img {
-	margin: 200px 0 0 0;
+	margin: 150px 0 0 0;
         padding: 15px;
         border: 10px solid #00032E;
         width: 300px;
@@ -76,8 +77,16 @@
         padding: 2em 3.5em;
     }
     h3 {
-        margin: 2em 0 1em 2.5em;
+        margin: 1.7em 0 0.8em 2.7em;
         padding: 1em 1.5em;
     }    
 }
 
+@media screen and (min-width: 960px) {
+    .content {
+        padding: 2em 4.5em;
+    }
+    h3 {
+        margin: 1.7em 0 0.8em 3.5em;
+    }
+}
