--- a/maitre-index.css
+++ b/maitre-index.css
@@ -3,20 +3,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    transition: .5s ease-in-out;
+    font-family: Monospace;
 }
 html {
     min-width: 360px;
 }
 .nav-bar {
-    width: 100%;
-    height: 4em;
-    display: flex;
-    flex-wrap: no-wrap;
-    position: fixed;
-    z-index: 99;
-    justify-content: space-around;
-    align-items: center;
     background-color: white;
     border-bottom: 2px solid #00032E;
 }
@@ -34,11 +26,16 @@ html {
 
 /* PHP */
 
-
+.fa-arrow-left {
+    visibility: hidden;
+}
+.fa-arrow-right, .fa-arrow-left {
+    font-size: 1.5em;
+}
 h1#logo {
     color: #00032E;
-    font-size: 1.3em;
-    font-family: Courier;
+    font-size: 1.2em;
+    padding: 1.3em 2em;
 }
 .fa-bars {
     color: #00032E;
@@ -46,33 +43,41 @@ h1#logo {
 .close {
     display: none;
 }
+.fa-bars, .fa-close {
+    font-size: 1em;
+    position: fixed;
+    z-index: 5;
+    right: 0;
+    top: 0;
+    background-color: white;
+    padding: 1.2em;
+}
 nav {
     padding-top: 4em;
     position: fixed;
+    overflow: scroll;
+    top: 0;
     right: 0;
     width: 0;
     height: 100%;
-    overflow: scroll;
-    z-index: 2;
+    z-index: 4;
     background-color: #00032E;
     text-align: center;
     transition: .5s ease-in-out;
 }
-nav img {
-    height: 7em;
-    width: 7em;
-    margin: 2em;
-    border: 4px solid #000324;
-    border-radius: 50%;
-    transition: 3s ease-in-out;
+nav ul, button, nav div {
+    display: none;
 }
 ul {
-    list-style: none;
+    display: flex;
+    flex-direction: column;
+    margin: 5em 0;
+    background-color: none;
 }
 ul li {
-    font-size: 1em;
-    font-family: Sans-Serif;
-    padding: 1em;
+    list-style: none;
+    font-size: 1.2em;
+    padding: 1.3em;
     color: white;
 }
 ul li:focus {
@@ -88,41 +93,23 @@ button {
     width: 80%;
     margin: 1em auto;
     padding: 1em;
-    font-size: 1em;
+    font-size: 1.2em;
 }
-button:hover {
-    border-radius: 5px;
-}
-button#login {
+button#subscribe {
     border: 2px solid white;
     color: white;
     background-color: transparent;
 }
-button#login:hover {
+button#subscribe:hover {
     box-shadow: 0 5px 40px white;
     color: #000324;
     background-color: white;
-}
-button#signup {
-    border: 2px solid white;
-    color: #000324;
-    background-color: white;
-}
-button#signup:hover {
-    box-shadow: 0 0 10px white;
-    border: 2px solid #000324;
-    color: white;
-    background-color: #000324;
 }
 .contact {
     padding: 1em;
     display: flex;
     flex-wrap: no-wrap;
     justify-content: center;
-}
-nav img, ul, button, nav div {
-    opacity: 0;
-    transition: .3s ease-in-out;
 }
 .contact i {
     font-size: 2em;
@@ -137,29 +124,61 @@ section {
     place-items: center;
     width: 100%;
     min-height: 100%;
-    background-color: white;
 }
-
+#wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    ovetflow: hidden;
+    background-color: red;
+    max-width: 300px;
+    height: 400px;
+    padding: 2em;
+    margin: 2em;
+}
 .greet img {
-    margin: 150px 0 0 0;
+    margin: 100px 0 0 0;
     padding: 10px;
     border-radius: 50%;
     border: 10px solid #00032E;
-    width: 250px;
+    width: 250px;/*  change back to 250px*/
     height: 250px;
+    transition: 1s ease;
 }
+
+/*
+@keyframes change-image {
+    0% {
+	background: url("img/jerry1.png");
+    }
+    20% {
+        background: url("img/jerry2.png");
+    }
+    40% {
+        background: url("img/jerry3.png");
+    }
+    50% {
+        background: url("img/jerry4.png");
+    }
+    70% {
+        background: url("img/jerry5.png");
+    }
+    80% {
+        background: url("img/jerry6.png");
+    }
+    100% {
+        background: url("img/jerry7.png");
+    }
+}*/
 
 .greet h2 {
     margin: 70px 0;
-    font-family: Courier;
     font-size: 1.4em;
     line-height: 2em;
     color: #00032E;
     width: 300px;
+    background-color: white;
 }
-
-/*-.span1 and .span2 are in index2.css-*/
-
 .line {
     width: 3em;
     height: 2px;
@@ -173,7 +192,6 @@ section {
     left: 0;
     margin: 30% 10%;
     padding: 1em;
-    font-family: Courier;
     color: yellow;
     background-color: #00032E;
     border: 2px solid white;
@@ -196,7 +214,6 @@ section {
 }
 article {
     padding: 1em 0 3em 0;
-    font-family: Courier;
 }
 .article-1, .article-3 {
     color: white;
@@ -205,10 +222,13 @@ article {
 a {
     text-decoration: underline;
 }
+a:hover {
+    font-weight: bold;
+}
 h2 {
     font-size: 2em;
     letter-spacing: 0.3em;
-    padding: 0.5em 0;
+    padding: 1.3em 0 0.5em 0;
     text-align: center;
 }
 .article-1 h2, .article-3 h2 {
@@ -220,8 +240,7 @@ h2 {
 }
 .content {
     font-size: 1.2em;
-    font-weight: bold;
-    padding: 1em;
+    padding: 1.5em;
     line-height: 2em;
 }
 .article-1 a {
@@ -248,10 +267,10 @@ h2 {
 }
 h3 {
     color: #000324;
-    margin: 1.5em 0 0.5em 1em;
+    margin: 1.5em 0 0.5em 1.2em;
     padding: 0.5em 1em;
     font-size: 1.5em;
-    border-left: 2px solid #00032E;
+    border-left: 4px solid #00032E;
 }
 .works {
     display: flex;
@@ -261,7 +280,6 @@ h3 {
 }
 .w p {
     font-size: 1em;
-    font-family: Courier;
     text-align: center;
 }
 .fa-whatsapp:hover {
@@ -280,7 +298,6 @@ h3 {
     color: red;
 }
 footer {
-    font-family: Courier;
     font-size: 0.7em;
     text-align: center;
     background-color: #00032E;
@@ -289,55 +306,52 @@ footer {
     margin: 0;
 }
 .form {
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: center;
-    margin: 0;
-    padding: 5em 0;
-    min-height: 100%;
+    padding-top: 10em;
+    position: fixed;
+    z-index: 3;
+    overflow: scroll;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
     display: none;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(0,0,0, 50%);
 }
 form {
-    width: 300px;
+    margin: 20px 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     border: 2px solid #000324;
     border-radius: 10px;
-    text-align: center;
-    align-content: center;
-    padding: 1em 0;
-    margin: auto;
-    background-color: #00032E;
-    font-family: Courier;
-}
-form h2 {
+    padding: 1em 1.5em 3em 1.5em;
     color: white;
+    background-color: #00032E;
 }
-form#signup-form {
-    height: 600px;
-    display: none;
+form p {
+    font-size: 1.2em;
+    padding: 1.5em;
+    line-height: 2em;
 }
 input {
-    width: 70%;
     padding: 1em;
-    margin: 1em;
-    font-size: 1em;
+    margin: 0.5em 1.5em;
+    font-size: 1em; 
     border: 2px solid #000324;
-    border-radius: 5px;
+    border-radius: 5px; 
     outline: none;
+    width: 80%;
 }
-
 input[type="submit"] {
-    border: 2px solid white;
     color: white;
-    background-color: transparent;
+    background-color: #000324;
 }
-
 input[type="submit"]:hover {
-    box-shadow: 0 5px 40px white;
-    color: #000324;
-    background-color: white;
-}
-
-form#login-form {
-    height: 450px;
-    display: none;
+    box-shadow: 0 0 10px white;
+    color: white;
+    background-color: #000324;
 }
