--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,4 +1,3 @@
-
 @media screen and (min-width: 480px) {
     h1#logo {
         font-size: 1.5em;
@@ -6,18 +5,18 @@
     }
     .fa-bars, .fa-close {
         font-size: 1.2em;
-	padding: 1.2em 1.5em;
+        padding: 1.2em 1.5em;
     }
     nav {
         padding-top: 6em;
     }
     ul li {
         font-size: 1.3em;
-	padding: 1.3em;
+        padding: 1.3em;
     }
     button {
-	width: 75%;
-	padding: 1.3em;
+        width: 75%;
+        padding: 1.3em;
         font-size: 1.2em;
     }
     .contact {
@@ -27,15 +26,17 @@
         font-size: 2.5em;
         padding: 0 0.2em;
     }
+    .carousel {
+        width: 400px;
+    }
     .greet img {
-	margin: 150px 0 0 0;
-        padding: 15px;
         border: 10px solid #00032E;
         width: 300px;
         height: 300px;
     }
     .greet h2 {
-	margin: 100px 0;
+        padding: 1.5em 1em;
+        margin: 100px 0;
         font-size: 1.8em;
         width: 400px;
     }
@@ -43,50 +44,53 @@
         width: 3.5em;
     }
     #message {
-	padding: 2em;
+        padding: 2em;
     }
     article {
         padding: 2em 0 4em 0;
     }
     h2 {
-	font-size: 2.3em;
+        font-size: 2.3em;
     }
     .content {
         font-size: 1.5em;
         padding: 2em;
     }
     h3 {
-	margin: 1.5em 0 0.5em 1.5em;
-	font-size: 2em;
+        margin: 1.5em 0 0.5em 1.5em;
+        font-size: 2em;
     }
     .works {
-	padding: 1.5em;
+        padding: 1.5em;
     }
     footer {
-	font-size: 1em;
+        font-size: 1em;
     }
     form {
         width: 400px;
-	border-radius: 15px;
-	padding: 2em 0;
+        border-radius: 15px;
+        padding: 2em 0;
     }
 }
 
 @media screen and (min-width: 720px) {
-    .content {
-        padding: 2em 3.5em;
+    .carousel {
+        width: 500px;
     }
-    h3 {
-        margin: 1.7em 0 0.8em 2.7em;
-        padding: 1em 1.5em;
-    }    
-}
-
-@media screen and (min-width: 960px) {
     .content {
         padding: 2em 4.5em;
     }
     h3 {
         margin: 1.7em 0 0.8em 3.5em;
+        padding: 1em 1.5em;
+    }
+}
+
+@media screen and (min-width: 960px) {
+    .content {
+        padding: 2em 7.5em;
+    }
+    h3 {
+        margin: 1.7em 0 0.8em 5.8em;
     }
 }
