--- a/maitre-index.css
+++ b/maitre-index.css
@@ -4,6 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Monospace;
+    scroll-behaviour: smooth;
 }
 html {
     min-width: 360px;
@@ -11,12 +12,6 @@ html {
 .nav-bar {
     background-color: white;
     border-bottom: 2px solid #00032E;
-}
-.fa-arrow-left {
-    visibility: hidden;
-}
-.fa-arrow-right, .fa-arrow-left {
-    font-size: 1.5em;
 }
 h1#logo {
     color: #00032E;
@@ -99,45 +94,77 @@ button#subscribe:hover {
 }
 .contact i {
     font-size: 2em;
-    padding: 0 0.1em;
+    padding: 0 0.2em;
     color: white;
+    transition: 1s ease-in-out;
+}
+.contact i:hover {
+    transform: scale(1.4);
 }
 section {
     padding-top: 0;
 }
 .greet {
-    display: grid;
-    place-items: center;
+    padding-top: 2em;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
-    min-height: 100%;
+    min-height: 600px;
 }
-#wrapper {
+.fa-arrow-right, .fa-arrow-left {
+    border-radius: 50%;
+    padding: .5em;
+    font-size: 1.5em;
+    cursor: pointer;
+}
+.carousel {
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: relative;
+    width: 360px;
+}
+.carousel-inner {
     display: flex;
     justify-content: center;
     align-items: center;
-    ovetflow: hidden;
-    background-color: red;
-    max-width: 300px;
-    height: 400px;
-    padding: 2em;
-    margin: 2em;
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+.carousel-item {
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+.carousel-item.active {
+    display: block;
 }
 .greet img {
-    margin: 100px 0 0 0;
+    margin: 50px 0;
     padding: 10px;
     border-radius: 50%;
     border: 10px solid #00032E;
     width: 250px;
     height: 250px;
-    transition: 1s ease;
 }
 .greet h2 {
-    margin: 70px 0;
+    padding: 1em;
+    width: 300px;
+    border-radius: 2em;
     font-size: 1.4em;
     line-height: 2em;
     color: #00032E;
-    width: 300px;
-    background-color: white;
+    box-shadow: 0 0 5px #00032E;
+    transition: .5s ease-in-out;
+}
+.greet h2:hover {
+    box-shadow: 0 0 10px #00032E;
+    transform: scale(1.1);
 }
 .line {
     width: 3em;
@@ -300,9 +327,9 @@ form p {
 input {
     padding: 1em;
     margin: 0.5em 1.5em;
-    font-size: 1em; 
+    font-size: 1em;
     border: 2px solid #000324;
-    border-radius: 5px; 
+    border-radius: 5px;
     outline: none;
     width: 80%;
 }
