--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -63,6 +63,14 @@
     .works {
         padding: 1.5em;
     }
+    .article-3 .contact {
+        margin: 0 2.5rem;
+    }
+    b {
+        font-size: 1.5rem;
+        left: 5.5rem;
+    }
+
     footer {
         font-size: 1em;
     }
@@ -84,6 +92,9 @@
         margin: 1.7em 0 0.8em 3.5em;
         padding: 1em 1.5em;
     }
+    .article-3 .contact {
+        margin: 0 5.5rem;
+    }
 }
 
 @media screen and (min-width: 960px) {
@@ -92,5 +103,8 @@
     }
     h3 {
         margin: 1.7em 0 0.8em 5.8em;
+    }
+    .article-3 .contact {
+        margin: 0 9.5rem;
     }
 }
