--- a/index.css
+++ b/index.css
@@ -4,10 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Monospace;
-    scroll-behaviour: smooth;
-}
-html {
-    min-width: 360px;
+    scroll-behavior: smooth;
 }
 .nav-bar {
     background-color: white;
@@ -55,6 +52,13 @@ ul {
     margin: 5em 0;
     background-color: none;
 }
+ul a {
+    text-decoration: none;
+    transition: 1s ease;
+}
+ul a:hover {
+    font-weight: 100;
+}
 ul li {
     white-space: nowrap;
     list-style: none;
@@ -81,12 +85,13 @@ button {
     font-size: 1.2em;
 }
 button#subscribe {
+    border-radius: 5px;
     border: 2px solid white;
     color: white;
     background-color: transparent;
 }
 button#subscribe:hover {
-    box-shadow: 0 5px 40px white;
+    box-shadow: 0 0 25px white;
     color: #000324;
     background-color: white;
 }
@@ -376,6 +381,12 @@ input[type="submit"]:hover {
     white-space: nowrap;
     overflow-x: scroll;
     padding: 1rem;
+}
+.gallery::-webkit-scrollbar {
+    width: 15px;
+}
+.gallery::-webkit-scrollbar-thumb {
+    background-color: #000324;
 }
 .gallery img {
     border-radius: 20px;
