--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,7 +1,6 @@
 @media screen and (min-width: 450px) {
     h1#logo {
         font-size: 1.5em;
-        padding: 1.3em 2em;
     }
     .fa-bars, .fa-close {
         font-size: 1.2em;
@@ -11,8 +10,8 @@
         padding-top: 4em;
     }
     ul li {
-        font-size: 1.3em;
-        padding: 1.3em;
+        font-size: 1.4em;
+        padding: 1.3em 1.9em;
     }
     button {
         width: 75%;
@@ -23,7 +22,7 @@
         padding: 2em;
     }
     .contact i {
-        font-size: 2.5em;
+        font-size: 2.3em;
         padding: 0 0.2em;
     }
     .carousel {
@@ -106,5 +105,8 @@
     }
     .article-3 .contact {
         margin: 0 9.5rem;
+    }
+    ul li {
+        padding: 1.3em 2.3em;
     }
 }
