--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@
 }
 .nav-bar {
     background-color: white;
+    border-bottom: 2px solid #00032E;
 }
 h1#logo {
     color: #00032E;
@@ -103,7 +104,7 @@ nav .contact {
     flex-wrap: no-wrap;
 }
 .contact i {
-    font-size: 2em;
+    font-size: 1.7em;
     padding: 0 0.2em;
     color: #C2C2C2;
     transition: .3s ease-in-out;
