--- a/index.css
+++ b/index.css
@@ -60,6 +60,7 @@ ul a:hover {
     font-weight: 100;
 }
 ul li {
+    text-align: center;
     white-space: nowrap;
     list-style: none;
     font-size: 1.2em;
