--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -60,6 +60,7 @@
     }
     .works {
         padding: 1.5em;
+        margin: 3em;
     }
     .article-3 .contact {
         margin: 0 2.5rem;
@@ -68,7 +69,6 @@
         font-size: 1.5rem;
         left: 5.5rem;
     }
-
     footer {
         font-size: 1em;
     }
