--- a/index.css
+++ b/index.css
@@ -114,7 +114,7 @@ nav .contact {
     transform: scale(1.3);
 }
 section {
-    padding-top: 0;
+    padding-tope: 0;
 }
 .images {
     margin: 2em auto;
@@ -226,8 +226,8 @@ h2 {
     color: #00032E;
 }
 .article-2 img, iframe {
-    width: 300px;
-    height: 250px;
+    width: 250px;
+    height: 200px;
     margin: 1em;
     border: 2px solid #00032E;
 }
@@ -243,10 +243,7 @@ h3 {
     flex-wrap: wrap;
     justify-content: center;
     padding: 1em;
-}
-.w p {
-    font-size: 1em;
-    text-align: center;
+    margin: 2em;
 }
 .article-3 {
     color: white;
