--- a/index.css
+++ b/index.css
@@ -225,11 +225,19 @@ h2 {
 .article-2 h2 {
     color: #00032E;
 }
-.article-2 img, iframe {
+.article-2 img {
     width: 250px;
     height: 200px;
     margin: 1em;
     border: 2px solid #00032E;
+}
+iframe {
+    margin: 1em;
+    width: 100%;
+    height: 250px;
+    max-width: 500px;
+    border: 2px solid #00032E;
+
 }
 h3 {
     color: #000324;
