--- a/index.css
+++ b/index.css
@@ -114,7 +114,7 @@ nav .contact {
     transform: scale(1.3);
 }
 section {
-    padding-tope: 0;
+    padding-top: 0;
 }
 .images {
     margin: 2em auto;
@@ -219,6 +219,18 @@ h2 {
 .article-2 a {
     color: #00032E;
 }
+.article-2 a::before {
+    content: "";
+    background-color: red;
+    position: absolute;
+    top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+    width: 100%;
+}
+/* .article-2 a:hover a::before {
+    
+} */
 .article-2 .line {
     background-color: #00032E;
 }
@@ -252,6 +264,7 @@ h3 {
     justify-content: center;
     padding: 1em;
     margin: 2em;
+    position: relative;
 }
 .article-3 {
     color: white;
