--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -24,20 +24,6 @@
     .contact i {
         font-size: 2.1em;
     }
-    .carousel {
-        width: 400px;
-    }
-    .greet img {
-        border: 10px solid #00032E;
-        width: 300px;
-        height: 300px;
-    }
-    .greet h2 {
-        padding: 1.5em 1em;
-        margin: 100px 0;
-        font-size: 1.8em;
-        width: 400px;
-    }
     .line {
         width: 3.5em;
     }
@@ -58,10 +44,6 @@
         margin: 1.5em 0 0.5em 1.5em;
         font-size: 2em;
     }
-    .works {
-        padding: 1.5em;
-        margin: 3em;
-    }
     .article-3 .contact {
         margin: 0 2.5rem;
     }
@@ -78,13 +60,22 @@
         padding: 2em 0;
     }
 }
+@media screen and (min-width: 600px) {
+    .center {
+        margin: 0 auto;
+        width: 90%;
+    }
+    .works {
+        width: 75%;
+    }
+}
 
 @media screen and (min-width: 768px) {
+    h1#logo, .fa-bars, .fa-close {
+        padding: 1.5em 3em;
+    }
     .contact i {
         font-size: 2.3em;
-    }
-    .carousel {
-        width: 500px;
     }
     .content {
         padding: 2em 4.5em;
@@ -105,10 +96,25 @@
     h3 {
         margin: 1.7em 0 0.8em 5.8em;
     }
+    .content {
+        display: block;
+        margin: 0 auto;
+    }
     .article-3 .contact {
         margin: 0 9.5rem;
     }
+    ul {
+        display: block;
+    }
     ul li {
         padding: 1.3em 2.3em;
+        white-space: normal;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .center {
+        margin: 0 auto;
+        width: 85%;
     }
 }
