--- a/index.css
+++ b/index.css
@@ -6,11 +6,10 @@
     font-family: Monospace;
     scroll-behavior: smooth;
 }
-*::-webkit-scrollbar {
+::-webkit-scrollbar {
     display: none;
 }
 :root {
-    --primary-text: #FFFFFF;
     --light-shade: #F9EDCC;
     --light-shade-two: #F9DF74;
     --hero-section: #001848;
@@ -22,6 +21,7 @@
     --fa-github: #181717;
     --fa-telegram: #0088CC;
     --fa-mail: #D93025;
+    --fa-youtube: #FF0000;
 }
 .nav-bar {
     background-color: var(--darkest-shade);
@@ -35,17 +35,17 @@ h1#logo {
 .close {
     display: none;
 }
-.fa-bars {
+.fa-solid, .fa-brands {
     color: var(--icons-light);
 }
 .fa-bars, .fa-close {
-    color: var(--icons-light);
     font-size: 1em;
     position: fixed;
     z-index: 5;
     right: 0;
     top: 0;
     padding: 1.2em;
+    display: none;
 }
 nav {
     padding-top: 2em;
@@ -82,7 +82,7 @@ ul li {
     list-style: none;
     font-size: 1.2em;
     padding: 1.3em;
-    color: var(--primary-text);
+    color: #FFFFFF;
 }
 ul li:hover {
     color: #FFD700;
@@ -100,13 +100,13 @@ button {
 button#subscribe {
     width: 80%;
     border-radius: 5px;
-    color: white;
+    color: #FFFFFF;
     border: none;
     background-color: var(--hero-section);
     transition: .5s ease-in-out;
 }           
 button#subscribe:hover {
-    box-shadow: 0 0 10px white;
+    box-shadow: 0 0 10px #FFFFFF;
     color: #FFD700;
     background-color: var(--medium-shade);
 }
@@ -121,7 +121,6 @@ nav .contact {
 .contact i {
     font-size: 1.7em;
     padding: 0 0.2em;
-    color: var(--icons-light);
     transition: .3s ease-in-out;
 }
 .contact i:hover {
@@ -199,7 +198,6 @@ section {
     width: 100%;
     max-width: 500px;
     height: 400px;  
-    overflow: scroll;
     margin: 0 auto;
     text-align: center;
     animation: change-image 30s infinite;
@@ -242,6 +240,10 @@ section {
     height: 2px;
     margin: 0.5em auto;
     background-color: var(--medium-shade);
+}
+.center {
+    margin: 0 auto;
+    width: 95%;
 }
 article {
     padding: 1em 0 3em 0;
@@ -287,7 +289,6 @@ h2 {
 .article-2 img {
     width: 250px;
     height: 200px;
-    margin: 1em;
     border: 4px solid var(--darkest-shade);
 }
 iframe {
@@ -305,20 +306,22 @@ h3 {
     border-left: 4px solid var(--medium-shade);
 }
 .works {
+    margin: 0 auto;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    align-items: center;
+    overflow: scroll;
     padding: 1em;
-    margin: 2em;
+    width: 90%;
 }
 .works > div {
+    margin: 0 1em;
     position: relative;
 }
 .works .links {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 250px;
+    width: 100%;
     padding: 2rem;
     position: absolute;
 	top: 50%;
@@ -337,18 +340,17 @@ h3 {
     margin: 0.7rem;
     transition: .3s ease-in-out;
 }
-.works .fa-youtube {
-    color: var(--icons-light);
-    font-size: 4rem;
+.fa-youtube {
+    color: var(--hero-section);
 }
-.works .fa-youtube:hover {
-    color: #FF0000;
+.fa-youtube:hover {
+    color: var(--fa-youtube);
 }
-.works .fa-external-link {
+.fa-external-link {
     color: #757575;
 }
-.works .fa-external-link:hover {
-    color: #64B5F6;
+.fa-external-link:hover {
+    color: var(--icons-light);
 }
 .works i:hover {
     transform: scale(1.2);
@@ -367,10 +369,10 @@ h3 {
     flex-wrap: wrap;
 }
 .contact div:hover {
-    background-color: #00032E;
+    background-color: var(--darkest-shade);
 }
 .contact div:hover b {
-    color: white;
+    color: #FFFFFF;
 }
 .article-3 a {
     display: flex;
@@ -387,19 +389,19 @@ b {
     color: var(--fa-whatsapp);
 }
 #whatsapp:hover .fa-whatsapp {
-    color: #07B100;
+    color: var(--fa-whatsapp);
 }
 .fa-facebook:hover {
     color: var(--fa-facebook);
 }
 #facebook:hover .fa-facebook {
-    color: #002997;
+    color: var(--fa-facebook);
 }
 .fa-telegram:hover {
     color: var(--fa-telegram);
 }
 #telegram:hover .fa-telegram {
-    color: #0074BE;
+    color: var(--fa-telegram);
 }
 .fa-envelope:hover {
     color: var(--fa-mail);
@@ -407,14 +409,11 @@ b {
 #mail:hover .fa-envelope {
     color: var(--fa-mail);
 }
-.fa-youtube:hover {
-    color: #FF0000;
-}
 .fa-github:hover {
-    color: white;
+    color: #FFFFFF;
 }
 #github:hover .fa-github {
-    color: white;
+    color: #FFFFFF;
 }
 footer {
     font-size: 0.7em;
@@ -448,10 +447,10 @@ form {
     justify-content: center;
     align-items: center;
     text-align: center;
-    border: 2px solid #000324;
+    border: 2px solid var(--darkest-shade);
     border-radius: 10px;
     padding: 1em 1.5em 3em 1.5em;
-    color: white;
+    color: #FFFFFF;
     background-color: var(--darkest-shade);
 }
 form p {
@@ -463,28 +462,18 @@ input {
     padding: 1em;
     margin: 0.5em 1.5em;
     font-size: 1em;
-    border: 2px solid #000324;
+    border: 2px solid var(--darkest-shade);
     border-radius: 5px;
     outline: none;
     width: 80%;
 }
 input[type="submit"] {
-    color: white;
+    color: #FFFFFF;
     background-color: var(--hero-section);
     transition: .5s ease-in-out;
 }
 input[type="submit"]:hover {
-    box-shadow: 0 0 10px white;
+    box-shadow: 0 0 10px #FFFFFF;
     color: #FFD700;
     background-color: var(--medium-shade);
-}
-.gallery {
-    margin: 3rem 1rem 2rem 1rem;
-    white-space: nowrap;
-    overflow-x: scroll;
-    padding: 1rem;
-}
-.gallery img {
-    border-radius: 20px;
-    border: 7px solid #000324;
 }
