--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -92,13 +92,11 @@
 @media screen and (min-width: 960px) {
     .content {
         padding: 2em 7.5em;
+        display: block;
+        margin: 0 auto;
     }
     h3 {
         margin: 1.7em 0 0.8em 5.8em;
-    }
-    .content {
-        display: block;
-        margin: 0 auto;
     }
     .article-3 .contact {
         margin: 0 9.5rem;
@@ -116,5 +114,6 @@
     .center {
         margin: 0 auto;
         width: 85%;
+        max-width: 1230px;
     }
 }
