--- a/index.css
+++ b/index.css
@@ -5,9 +5,13 @@
     box-sizing: border-box;
     font-family: Monospace;
     scroll-behavior: smooth;
+    scroll-padding-top: 60px; /* height of your fixed navbar */
 }
 html {
     -webkit-text-size-adjust: 100%;
+    max-width: 1400px;
+    margin: 0 auto;
+    background-color: gainsboro;
 }
 ::-webkit-scrollbar {
     display: none;
@@ -27,28 +31,28 @@ html {
     --fa-youtube: #FF0000;
 }
 .nav-bar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    max-width: 1400px;
+    padding: 0 3em;
     background-color: var(--darkest-shade);
-    border-bottom: 2px solid #00032E;
+    display: flex;
+    justify-content: space-between;
+    z-index: 5;
 }
-h1#logo {
+#logo {
     color: var(--light-shade-two);
     font-size: 1.2em;
-    padding: 1.3em 2em;
-}
-.close {
-    display: none;
+    padding: 1.3em 0;
 }
 .fa-solid, .fa-brands {
     color: var(--icons-light);
 }
 .fa-bars, .fa-close {
     font-size: 1em;
-    position: fixed;
-    z-index: 5;
-    right: 0;
-    top: 0;
-    padding: 1.2em;
-    display: none;
+    z-index: 8;
+    padding: 1.3em 0;
 }
 nav {
     padding-top: 2em;
@@ -63,28 +67,23 @@ nav {
     background-color: var(--darkest-shade);
     transition: .5s ease-in-out;
 }
-nav ul, button, nav div {
-    display: none;
+.active {
+    width: 60%;
 }
 ul {
-    display: flex;
-    flex-direction: column;
-    padding: 3em 0;
-    background-color: none;
+    padding: 2.5em 0;
 }
 ul a {
     text-decoration: none;
     transition: 1s ease-in-out;
 }
-ul a:hover {
+ul a:hover {    
     font-weight: 100;
 }
 ul li {
-    text-align: center;
-    white-space: nowrap;
     list-style: none;
     font-size: 1.2em;
-    padding: 1.3em;
+    padding: 1.5em 10%;
     color: #FFFFFF;
 }
 ul li:hover {
@@ -109,7 +108,7 @@ button#subscribe {
     transition: .5s ease-in-out;
 }           
 button#subscribe:hover {
-    box-shadow: 0 0 10px #FFFFFF;
+    box-shadow: 0 0 7px #FFFFFF;
     color: #FFD700;
     background-color: var(--medium-shade);
 }
@@ -119,7 +118,6 @@ button#subscribe:hover {
 }
 nav .contact {
     display: flex;
-    flex-wrap: no-wrap;
 }
 .contact i {
     font-size: 1.7em;
@@ -132,21 +130,6 @@ nav .contact {
 section {
     padding-top: 2em;
     background-color: var(--hero-section);
-}
-.img-display {
-    position: fixed;
-    top: 0;
-    width: 100vw;
-    height: 100%;
-    z-index: 1;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(0, 31, 84, 50%);
-    display: none;
-}
-.display {
-    width: 300px;
-    height: 400px;
 }
 @keyframes change-image {
     0% {
@@ -195,28 +178,18 @@ section {
         background-image: url(img/jerry1.jpg);
     }
 }
-.images {
-    border: 10px solid var(--medium-shade);
-    border-radius: 10px;
-    width: 100%;
-    max-width: 500px;
-    height: 400px;  
-    margin: 0 auto;
-    text-align: center;
+.animate {
+    margin-top: 2.5em;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
     animation: change-image 30s infinite;
     background-image: url(img/jerry1.jpg);
+    background-position: contain;
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    transition: 1s ease-in-out;
-}
-.images:hover {
-    transform: rotate(360deg);
-
-}
-.images img {
-    width: 100px;
-    height: 100px;
-    padding: 8px;
+    height: 600px;
+    min-height: 100vh;
 }
 .cv {
     padding: 2em 0;
