--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -166,6 +166,9 @@
     ul li {
         padding: 2em 1.54em;
     }
+    .cv {
+        margin-bottom: 7%;
+    }
 }
 
 @media screen and (min-width: 1200px) {
