--- a/index.css
+++ b/index.css
@@ -190,6 +190,7 @@ section {
     background-size: 100% 100%;
     height: 600px;
     min-height: 100vh;
+    max-height: 700px;
 }
 .cv {
     padding: 2em 0;
