--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -128,7 +128,7 @@
     .contact a {
         color: transparent;
     }
-    .contact i {
+    nav .contact i {
         font-size: 2.3em;
         padding: 0.5em;
         text-align: right;
