--- a/index.css
+++ b/index.css
@@ -188,14 +188,13 @@ section {
     background-position: contain;
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    height: 600px;
-    min-height: 100vh;
+    height: 100vh;
     max-height: 600px;
 }
 .cv {
     padding: 2em 0;
     text-align: center;
-    margin-bottom: 10%;
+    margin-bottom: 5%;
 }
 .cv button {
     margin: 1em;
