--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -91,7 +91,7 @@
         position: static;
         height: 0;
         overflow: visible;
-         padding: 0;
+        padding: 0;
         min-width: 400px;
     }
     nav ul, button, nav div {
@@ -147,6 +147,8 @@
         margin-bottom: -3%;
     }
     .animate {
+        margin-top: 2.7em;
+        height: 100vh;
         background-size: 80% 100%;
     }
 }
