--- a/index.css
+++ b/index.css
@@ -183,13 +183,15 @@ section {
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    animation: change-image 30s infinite;
+    animation: change-image 40s infinite;
+    background-color: var(--medium-shade);
     background-image: url(img/jerry1.jpg);
-    background-position: contain;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    height: 100vh;
-    max-height: 600px;
+    height: 90vh;
+    min-height: 500px;
+    max-height: 700px;
 }
 .cv {
     padding: 2em 0;
